# seq2vec

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  LICENSE  LICENSE_THIRDPARTY  README.md  build.sh  install.sh  main.cpp  toH5.py
doc/: README
include/: kmer.h  mode_batch.h  mode_mmap.h  progress.h  seq.h
tools/seq2vec/include/: utils.hpp
tools/seq2vec/src/: main.cpp  seq2vec.cpp  seq2vec.hpp
